--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-DB_USER = root
-DB_PASSWORD = Duta123.
-DB_DATABASE = perpustakaan
+DB_USER = postgres
+DB_PASSWORD = duta123
+DB_DATABASE = perpustakan
 DB_HOST = localhost
-DB_DIALEC = postgres
+DB_DIALECT = postgres
 DB_PORT = 5432
+
 DB_DATABASE_TEST = anma_database_test
 DB_DATABASE_PROD = anma_database_produksi
